# wield

./: .gitignore  CMakeLists.txt  DispatcherBase.h  LICENSE.md  Message.h  MessageBase.h  ProcessingFunctor.h  QueueBase.h  README  README.md  SchedulerBase.h  StageBase.h  TODO  TODO.md  build.bat  build.sh
_cmake/: FindTBB.cmake  (+4 more)
unit_test/: CMakeLists.txt  Message.cpp  Message.h  Stage.h  Stages.h  TestDispatcher.h  TestMessage.cpp  TestProcessingFunctor.h  TestQueue.h  TestScheduler.h  TestStage.h  main.cpp  testConfigurator-UT.cpp  testDispatcher-UT.cpp  testExceptions-UT.cpp  testProcessingFunctor-UT.cpp  testQueue-UT.cpp  testScheduler-UT.cpp  testStage-UT.cpp
unit_test/configs/: test_config.yml
wield/: CMakeLists.txt  CloneMessageTag.hpp  Concepts.h  DispatcherBase.h  DispatcherBase.hpp  DispatcherInterface.h  DispatcherInterface.hpp  Exceptions.h  Exceptions.hpp  MessageBase.h  MessageBase.hpp  QueueBase.h  SchedulerBase.h  SchedulerBase.hpp  StageBase.h  StageBase.hpp  Traits.h  Traits.hpp  UsingIntrusiveIn.hpp  UsingIntrusivePtrIn.hpp
wield/adapters/: FanoutProcessingFunctor.hpp  PassThroughStageQueue.h  PassThroughStageQueue.hpp  ProcessingFunctorChain.h  ProcessingFunctorChain.hpp  QueueAdapter.h  QueueInterface.h
wield/adapters/dynamic/: FanoutProcessingFunctor.hpp
wield/adapters/polymorphic/: MultipleInputQueueAdapter.hpp  PassThroughStageQueue.h  PassThroughStageQueue.hpp  QueueAdapter.h  QueueAdapter.hpp  QueueInterface.h  QueueInterface.hpp
wield/config/: ProcessConfig.h  ProcessPriorityEnum.h  StageConfig.h  ThreadConfig.h
wield/details/: DummyStageCreator.hpp  DummyStageCreatorImpl.hpp  QueueCreator.hpp  SchedulingPolicyHolder.hpp  SingleThreadedReferenceCountBase.hpp  SmartPtrCreator.hpp
wield/logging/: Log.h  Log.hpp  LogMessage.h  Logging.h  LoggingPolicy.h  LoggingPolicy.hpp  ScopedClogRedirector.h
wield/platform/: list  string  thread
wield/policies/: ExhaustivePollingPolicy.h  ExhaustivePollingPolicy.hpp  ThreadPerStageScheduler.hpp
wield/polling_policies/: ExhaustivePollingPolicy.hpp
wield/schedulers/: RandomVisit.hpp  RoundRobin.hpp  SRPT.hpp  ThreadPerStage.hpp  ThreadPerStageScheduler.hpp
wield/schedulers/color/: Color.hpp  Dispatcher.hpp  README.md
wield/schedulers/color_minus/: ColorMinus.hpp  Dispatcher.hpp  README.md
wield/schedulers/utils/: MessageCount.hpp  NumberOfThreads.hpp  ThreadAssignments.hpp
wield/src/: DefaultLoggingPolicy.cpp  DefaultLoggingPolicy.h  DefaultLoggingPolicy.hpp  Exceptions.cpp  Log.cpp  LogMessage.cpp  NumberOfThreads.cpp
wield/tests/acceptance_test/queue_stress/: CMakeLists.txt  TODO.md
wield/tests/unit_test/: CMakeLists.txt  exampleMultipleSchedulers-UT.cpp  examplePoisonPill-UT.cpp  exampleTimerDrivenEventSource-UT.cpp  exampleUsingRawPointersInQueue-UT.cpp  main.cpp  testBatchMessageProcessing-UT.cpp  testColorMinusDispatcher-UT.cpp  testColorMinusSchedulingPolicy-UT.cpp  testColorSchedulingPolicy-UT.cpp  testFanoutProcessingFunctor-UT.cpp  testLog-UT.cpp  testMessageCount-UT.cpp  testPassThroughStageQueue-UT.cpp  testPolymorphicMultipleInputQueueAdapter-UT.cpp  testProcessingFunctor-UT.cpp  testProcessingFunctorChain-UT.cpp  testQueueAdapter-UT.cpp  testRandomVisitSchedulingPolicy-UT.cpp  testRoundRobinSchedulingPolicy-UT.cpp  testSRPTSchedulingPolicy-UT.cpp  testScheduler-UT.cpp  testThreadAssignments-UT.cpp  testThreadPerStageSchedulingPolicy-UT.cpp
wield/tests/unit_test/configs/: vld.ini
wield/tests/unit_test/poison_pill/: Message.cpp  Message.hpp  ProcessingFunctor.hpp  Scheduler.hpp  Stages.cpp  Stages.hpp  Traits.hpp
wield/tests/unit_test/test/: Message.hpp  ProcessingFunctor.hpp  Scheduler.hpp  Stages.cpp  Stages.hpp  Traits.hpp
wield/tests/unit_test/test_adapter/: Message.cpp  Message.hpp  ProcessingFunctor.hpp  Scheduler.hpp  Stages.hpp  Traits.hpp
wield/tests/unit_test/test_batch/: Message.cpp  Message.hpp  ProcessingFunctor.hpp  Scheduler.hpp  Stages.cpp  Stages.hpp  Traits.hpp
wield/unit_test/: CMakeLists.txt  StageGroups.h  Stages.h  TestProcessingFunctor.h  TestQueue.h  TestScheduler.h  UnitTestSupport.h  exampleAggregateProcessingFunctor-UT.cpp  exampleEventSourceProcessingFunctor-UT.cpp  exampleEventSourceQueue-UT.cpp  exampleTimerDrivenEventSource-UT.cpp  exampleUsingRawPointersInQueue-UT.cpp  main.cpp  testColorDispatcher-UT.cpp  testColorMinusDispatcher-UT.cpp  testColorMinusSchedulingPolicy-UT.cpp  testColorSchedulingPolicy-UT.cpp  testDispatcher-UT.cpp  testDummyStageCreator-UT.cpp  testExceptions-UT.cpp  testLog-UT.cpp  testLogging-UT.cpp  testMessageCount-UT.cpp  testPassThroughStageQueue-UT.cpp  testPolymorphicMultipleInputQueueAdapter-UT.cpp  testProcessingFunctor-UT.cpp  testProcessingFunctorChain-UT.cpp  testQueue-UT.cpp  testQueueAdapter-UT.cpp  testQueueCreator-UT.cpp  testRoundRobinSchedulingPolicy-UT.cpp  testScheduler-UT.cpp  testScopedClogRedirector-UT.cpp  testStage-UT.cpp  testThreadPerStageSchedulingPolicy-UT.cpp
wield/unit_test/platform/: ConcurrentQueue.h  ConcurrentQueue.hpp  FileSystem.h  MemoryLeakDetection.h  MemoryLeakDetection.hpp  Regex.hpp  UnitTestAssert.h  UnitTestSupport.hpp
wield/unit_test/test/: Dispatcher.h  Message.cpp  Message.h  PollingPolicy.h  ProcessingFunctor.h  ProcessingFunctor.hpp  Queue.h  Scheduler.h  Scheduler.hpp  Stage.h  StageGroups.h  Stages.cpp  Stages.h  Stages.hpp  Traits.h  Traits.hpp
wield/unit_test/test_adapter/: Dispatcher.h  Message.cpp  Message.h  Message.hpp  PollingPolicy.h  ProcessingFunctor.h  ProcessingFunctor.hpp  Queue.h  Scheduler.h  Scheduler.hpp  SimpleConcurrentQueue.h  SimpleConcurrentQueue.hpp  Stage.h  StageGroups.h  Stages.h  Stages.hpp  Traits.h  Traits.hpp
wield/unit_test/test_color/: Message.hpp  ProcessingFunctor.hpp  Stages.cpp  Traits.hpp
wield/unit_test/test_color_minus/: Message.cpp  Message.hpp  ProcessingFunctor.hpp  Stages.cpp  Stages.hpp  Traits.hpp
wield/unit_test/test_raw/: Message.cpp  Message.h  Message.hpp  ProcessingFunctor.h  ProcessingFunctor.hpp  Scheduler.h  Scheduler.hpp  TestRawPointerMessage.hpp  Traits.h  Traits.hpp
wield/util/: EnumUtils.h
(+92 files in other folders)
